# AIvsAI

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
aivsai/: __init__.py  attacker.py  config.py  judge.py  llm_client.py  main.py  models.py  orchestrator.py  persistence.py  ssrf.py  strategies.py  target_client.py
aivsai/static/: app.js  index.html  style.css
tests/: test_smoke.py
